objects/npe4__Relationship__c.object
<CustomObject>
    <fields>
        <fullName>npe4__Contact__c</fullName>
        <description>Related Contact is this Contact&apos;s ______.</description>
        <inlineHelpText>Related Contact is this Contact&apos;s ______.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npe4__Description__c</fullName>
        <description>Additional information about this Relationship</description>
        <inlineHelpText>Additional information about this Relationship</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npe4__ReciprocalRelationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System field that links to the two sides of the Relationship together.  This field should not be modified directly.  The Reciprocal Relationship will have the opposite type, if available, of this Relationship.</description>
        <inlineHelpText>System field that links to the two sides of the Relationship together.  This field should not be modified directly.  The Reciprocal Relationship will have the opposite type, if available, of this Relationship.</inlineHelpText>
        <label>Reciprocal Relationship</label>
        <referenceTo>npe4__Relationship__c</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe4__RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Hidden Relationships List</relationshipLabel>
        <relationshipName>Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe4__Relationship_Explanation__c</fullName>
        <description>Text formula that constructs a sentence explaining the relationship between the two Contacts</description>
        <formula>TEXT(npe4__RelatedContact__r.Salutation) + &quot; &quot; + npe4__RelatedContact__r.FirstName + &quot; &quot; + npe4__RelatedContact__r.LastName
+ &quot;  &quot;  +  $Label.npe4__Relationship_Explanation_Connector + &quot; &quot; + 
TEXT(npe4__Contact__r.Salutation) + &quot; &quot; + npe4__Contact__r.FirstName + &quot; &quot; + npe4__Contact__r.LastName + &quot;&apos;s &quot; + TEXT(npe4__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Text formula that constructs a sentence explaining the relationship between the two Contacts</inlineHelpText>
        <label>Relationship Explanation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe4__SYSTEM_SystemCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field that indicates if this Relationship was created automatically as the reciprocal to another Relationships.</description>
        <inlineHelpText>System field that indicates if this Relationship was created automatically as the reciprocal to another Relationships.</inlineHelpText>
        <label>_SYSTEM: SystemCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe4__Status__c</fullName>
        <description>Status of the Relationship.</description>
        <inlineHelpText>Status of the Relationship.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe4__Type__c</fullName>
        <description>Field that describes how the Related Contact is connected to the Contact.</description>
        <inlineHelpText>Field that describes how the Related Contact is connected to the Contact.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Coworker</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Husband</fullName>
                </value>
                <value>
                    <fullName>Wife</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Cousin</fullName>
                </value>
                <value>
                    <fullName>Grandmother</fullName>
                </value>
                <value>
                    <fullName>Grandfather</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Grandson</fullName>
                </value>
                <value>
                    <fullName>Granddaughter</fullName>
                </value>
                <value>
                    <fullName>Grandchild</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Relationship</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>npe4__Related_Contact_Do_Not_Change</fullName>
        <active>true</active>
        <description>Do not allow user to change Related Contact value as it damages the paired relationship data</description>
        <errorConditionFormula>and(not( ISNEW()), ISCHANGED( npe4__RelatedContact__c ))</errorConditionFormula>
        <errorDisplayField>npe4__RelatedContact__c</errorDisplayField>
        <errorMessage>Rather than change the contacts in an existing relationship, delete this relationship and create a new on between the new contacts</errorMessage>
    </validationRules>
</CustomObject>